2008-12-22  Néstor Salceda  <nestor.salceda@gmail.com>

	* AvoidSwitchStatementsRule.cs: Fix some typos.  Thanks Sebastien !!

2008-12-22  Néstor Salceda  <nestor.salceda@gmail.com>

	* AvoidSwitchStatementsRule.cs: New.  Rule for avoid the switch
	statments smell.
	* Makefile.am: Add tests and rule to the build.

2008-12-17  Néstor Salceda  <nestor.salceda@gmail.com>

	* AvoidLongParameterListsRule.cs: Remove the extra checking which only
	introduces confussion.

2008-12-17  Néstor Salceda  <nestor.salceda@gmail.com>

	* AvoidCodeDuplicatedInSameClassRule.cs: Use the new nose for its
	checkings.
	* AvoidCodeDuplicatedInSiblingClassesRule.cs: Use the new nose for its
	checkings.
	* CodeDuplicatedLocator.cs: Use the new algorithm in this code.
	* ExpressionCollection.cs: Removed the old system.
	* ExpressionFillerVisitor.cs: Removed the old system.
	* InstructionMatcher.cs: The new nose.
	* Makefile.am: Adjust the changes to the build system.
	* Pattern.cs: An abstraction for a pattern of instructions.  The common
	patterns (Disposables, foreach, returns ...) are here in order to check
	if a pattern can be extracted.

2008-12-15  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidCodeDuplicatedInSameClassRule.cs: Use IsEnum, IsInterface
	and HasMethods
	* AvoidCodeDuplicatedInSiblingClassesRule.cs: Use HasMethods,
	IsEnum and IsInterface
	* AvoidLargeClassesRule.cs: Use HasFields
	* AvoidLongMethodsRule.cs: Use HasParameters and HasFields
	* AvoidLongParameterListsRule.cs: Use HasMethods, HasParameters
	and HasConstructors
	* AvoidSpeculativeGeneralityRule.cs: Use HasInterfaces, HasMethods
	and IsEnum
	* CodeDuplicatedLocator.cs: Use HasMethods

2008-11-17  Jesse Jones  <jesjones@mindspring.com>

	* AvoidMessageChainsRule.cs: Use Log instead of Trace.

2008-11-09  Sebastien Pouliot  <sebastien@ximian.com>

	* Gendarme.Rules.Smells.csproj: Change AvoidMessageChainsRule to 
	Compile. Fix the "remove from Makefile.am".

2008-11-07  Alan McGovern  <amcgovern@novell.com>